# rust-jwt-example

./: Cargo.toml
src/: constants.rs  error.rs  main.rs
src/api/: mod.rs
src/api/filters/: auth.rs  db.rs  jwt.rs  mod.rs
src/api/handlers/: hello_admin.rs  hello_user.rs  login.rs  mod.rs  rejection.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/schemas/: mod.rs
src/models/: user.rs
src/services/: jwt_service.rs  login_service.rs  mod.rs
src/utils/: mod.rs
