[package]
name = "rust-jwt-example"
version = "0.1.1"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
jsonwebtoken = "7.2.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
envy = "0.4.2"
dotenv = "0.15.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
